.metadata/.plugins/org.eclipse.cdt.ui/ompi.build.log
15:06:30 **** Incremental Build of configuration Default for project ompi ****
make all 
Making all in include
make[1]: Entering directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/include'
make  all-am
make[2]: Entering directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/include'
make[2]: Leaving directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/include'
make[1]: Leaving directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/include'
Making all in datatype
make[1]: Entering directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/datatype'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/datatype'
Making all in debuggers
make[1]: Entering directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/debuggers'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/debuggers'
Making all in etc
make[1]: Entering directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/etc'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/etc'
Making all in mpiext/XCLFrame/scheduling
make[1]: Entering directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/mpiext/XCLFrame/scheduling'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/mpiext/XCLFrame/scheduling'
Making all in mpi/c
make[1]: Entering directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/mpi/c'
Making all in profile
make[2]: Entering directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/mpi/c/profile'
  CC       pinit.lo
In file included from ../../../mpiext/XCLFrame/c/binding/dvMgmt/dvMgmt.h:10:0,
                 from ../../../mpiext/XCLFrame/c/binding/dvMgmt/commsBench.h:14,
                 from pinit.c:31:
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:33:2: error: unknown type name 'cl_device_type'
  cl_device_type dType;        //device type
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:34:2: error: unknown type name 'cl_device_id'
  cl_device_id deviceId;       //device ID
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:35:2: error: unknown type name 'cl_context_properties'
  cl_context_properties platform; //device platform controller
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:36:2: error: unknown type name 'cl_context'
  cl_context context;          //context
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:37:2: error: unknown type name 'cl_command_queue'
  cl_command_queue queue;      //command-queue
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:39:2: error: unknown type name 'cl_event'
  cl_event eventObject;        //event object
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:40:2: error: unknown type name 'cl_ulong'
  cl_ulong kernelStartTime;    //kernel start time
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:41:2: error: unknown type name 'cl_ulong'
  cl_ulong kernelEndTime;      //kernel end time
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:46:2: error: unknown type name 'cl_context_properties'
  cl_context_properties cprops[3];
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:50:2: error: unknown type name 'cl_mem'
  cl_mem ** memHandler; //handler for the memory object (both cpu or gpu mem)
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:51:2: error: unknown type name 'cl_ulong'
  cl_ulong maxAllocMemSize;
  ^
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/Device.h:52:2: error: unknown type name 'cl_ulong'
  cl_ulong globalMemSize;
  ^
In file included from ../../../mpiext/XCLFrame/c/binding/dvMgmt/dvMgmt.h:11:0,
                 from ../../../mpiext/XCLFrame/c/binding/dvMgmt/commsBench.h:14,
                 from pinit.c:31:
../../../mpiext/XCLFrame/c/binding/dvMgmt/../../../multiDeviceMgmt/deviceMgmt/deviceExploration.h:11:19: fatal error: CL/cl.h: No such file or directory
 #include "CL/cl.h"
                   ^
compilation terminated.
make[2]: Leaving directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/mpi/c/profile'
make[2]: *** [pinit.lo] Error 1
make[1]: Leaving directory `/home/uriel/Dev/mpisrc/XSCALAMPI/ompi/mpi/c'
make[1]: *** [all-recursive] Error 1
make: *** [all-recursive] Error 1

15:06:30 Build Finished (took 960ms)

